--- a/gen/Cargo.toml
+++ b/gen/Cargo.toml
@@ -2,6 +2,8 @@
 name = "gen"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+repository = "https://github.com/micromaomao/minesweeper-place"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
