--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ concurrency:
 
 jobs:
   build:
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: Setup wasm-pack
@@ -24,6 +25,7 @@ jobs:
         path: web/dist/
         if-no-files-found: error
   deploy:
+    runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
